--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,8 +27,6 @@
         "linebreak-style": "off",
         "node/no-unsupported-features/es-syntax": "off",
         "no-underscore-dangle": "off",
-        "import/prefer-default-export": 1,
-        "prefer-arrow-callback": 0,
-        "object-shorthand": 0
+        "import/prefer-default-export": "off"
     }
 }
